save model by epoch

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,17 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.5104, dtype=torch.float64) tensor(0.5104, dtype=torch.float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "D_logits = torch.tensor(np.random.rand(10))\n",
     "onelike = torch.ones_like(D_logits)\n",
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,40 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9584, 1, 16, 128)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_prev.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -109,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,36 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A bar's shape: (128, 128)\n",
-      "./3/3.2/demo\n",
-      "test_songsaved\n",
-      "Multitrack(name=None, resolution=4, tempo=array(shape=(768,), dtype=float64), tracks=[StandardTrack(name=16, program=0, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8)), StandardTrack(name='chord', program=16, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8))])\n",
-      "A bar's shape: (128, 128)\n",
-      "./3/3.2/demo\n",
-      "test_songsaved\n",
-      "Multitrack(name=None, resolution=4, tempo=array(shape=(768,), dtype=float64), tracks=[StandardTrack(name=16, program=0, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8)), StandardTrack(name='chord', program=16, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8))])\n",
-      "A bar's shape: (128, 128)\n",
-      "./3/3.2/demo\n",
-      "test_songsaved\n",
-      "Multitrack(name=None, resolution=4, tempo=array(shape=(768,), dtype=float64), tracks=[StandardTrack(name=16, program=0, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8)), StandardTrack(name='chord', program=16, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8))])\n",
-      "A bar's shape: (128, 128)\n",
-      "./3/3.2/demo\n",
-      "test_songsaved\n",
-      "Multitrack(name=None, resolution=4, tempo=array(shape=(768,), dtype=float64), tracks=[StandardTrack(name=16, program=0, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8)), StandardTrack(name='chord', program=16, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8))])\n",
-      "A bar's shape: (128, 128)\n",
-      "./3/3.2/demo\n",
-      "test_songsaved\n",
-      "Multitrack(name=None, resolution=4, tempo=array(shape=(768,), dtype=float64), tracks=[StandardTrack(name=16, program=0, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8)), StandardTrack(name='chord', program=16, is_drum=False, pianoroll=array(shape=(128, 128), dtype=uint8))])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_ver = int(input(\"Model: \"))\n",
     "attempt = int(input(\"Attempt: \"))\n",
@@ -290,16 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from midi2audio import FluidSynth"
+    "from midi2audio import FluidSynth\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,36 +251,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fluidsynth"
+    "fs.midi_to_audio('./3/3.2/demo/test_song_3.mid', './3/3.2/demo/test_3.wav')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "sample_rate = 44100\n",
+    "\n",
+    "def midi_to_mp3(midi_file, audio_file, sound_font=\"/users/eleves-b/2021/minh.pham/.fluidsynth/Abbey-Steinway-D-v1.9.sf2\"):\n",
+    "    # Convert modified MIDI to WAV using FluidSynth\n",
+    "    subprocess.call([\"/users/eleves-b/2021/minh.pham/fluidsynth-2.3.2/build/src/fluidsynth\", '-ni', sound_font, midi_file, '-F', audio_file, '-r', str(sample_rate)])\n",
+    "\n",
+    "    # Convert WAV to MP3 using FFmpeg\n",
+    "    # subprocess.call(['ffmpeg', '-i', 'output.wav', '-codec:a', 'libmp3lame', output_file])\n",
+    "\n",
+    "    # Clean up the intermediate WAV file\n",
+    "    # subprocess.call(['rm', 'output.wav'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'fluidsynth'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fs\u001b[39m.\u001b[39;49mmidi_to_audio(\u001b[39m'\u001b[39;49m\u001b[39m./3/3.2/demo/test_song_2.mid\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m./3/3.2/demo/test_2.wav\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/cse204-project/lib/python3.11/site-packages/midi2audio.py:46\u001b[0m, in \u001b[0;36mFluidSynth.midi_to_audio\u001b[0;34m(self, midi_file, audio_file)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmidi_to_audio\u001b[39m(\u001b[39mself\u001b[39m, midi_file, audio_file):\n\u001b[0;32m---> 46\u001b[0m     subprocess\u001b[39m.\u001b[39;49mcall([\u001b[39m'\u001b[39;49m\u001b[39mfluidsynth\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m-ni\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msound_font, midi_file, \u001b[39m'\u001b[39;49m\u001b[39m-F\u001b[39;49m\u001b[39m'\u001b[39;49m, audio_file, \u001b[39m'\u001b[39;49m\u001b[39m-r\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mstr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msample_rate)])\n",
-      "File \u001b[0;32m~/miniconda3/envs/cse204-project/lib/python3.11/subprocess.py:389\u001b[0m, in \u001b[0;36mcall\u001b[0;34m(timeout, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    381\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcall\u001b[39m(\u001b[39m*\u001b[39mpopenargs, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    382\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Run command with arguments.  Wait for command to complete or\u001b[39;00m\n\u001b[1;32m    383\u001b[0m \u001b[39m    timeout, then return the returncode attribute.\u001b[39;00m\n\u001b[1;32m    384\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    387\u001b[0m \u001b[39m    retcode = call([\"ls\", \"-l\"])\u001b[39;00m\n\u001b[1;32m    388\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 389\u001b[0m     \u001b[39mwith\u001b[39;00m Popen(\u001b[39m*\u001b[39;49mpopenargs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs) \u001b[39mas\u001b[39;00m p:\n\u001b[1;32m    390\u001b[0m         \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    391\u001b[0m             \u001b[39mreturn\u001b[39;00m p\u001b[39m.\u001b[39mwait(timeout\u001b[39m=\u001b[39mtimeout)\n",
-      "File \u001b[0;32m~/miniconda3/envs/cse204-project/lib/python3.11/subprocess.py:1024\u001b[0m, in \u001b[0;36mPopen.__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask, pipesize, process_group)\u001b[0m\n\u001b[1;32m   1020\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext_mode:\n\u001b[1;32m   1021\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr \u001b[39m=\u001b[39m io\u001b[39m.\u001b[39mTextIOWrapper(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr,\n\u001b[1;32m   1022\u001b[0m                     encoding\u001b[39m=\u001b[39mencoding, errors\u001b[39m=\u001b[39merrors)\n\u001b[0;32m-> 1024\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_execute_child(args, executable, preexec_fn, close_fds,\n\u001b[1;32m   1025\u001b[0m                         pass_fds, cwd, env,\n\u001b[1;32m   1026\u001b[0m                         startupinfo, creationflags, shell,\n\u001b[1;32m   1027\u001b[0m                         p2cread, p2cwrite,\n\u001b[1;32m   1028\u001b[0m                         c2pread, c2pwrite,\n\u001b[1;32m   1029\u001b[0m                         errread, errwrite,\n\u001b[1;32m   1030\u001b[0m                         restore_signals,\n\u001b[1;32m   1031\u001b[0m                         gid, gids, uid, umask,\n\u001b[1;32m   1032\u001b[0m                         start_new_session, process_group)\n\u001b[1;32m   1033\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m   1034\u001b[0m     \u001b[39m# Cleanup if the child failed starting.\u001b[39;00m\n\u001b[1;32m   1035\u001b[0m     \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m \u001b[39mfilter\u001b[39m(\u001b[39mNone\u001b[39;00m, (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstdin, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstdout, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr)):\n",
-      "File \u001b[0;32m~/miniconda3/envs/cse204-project/lib/python3.11/subprocess.py:1917\u001b[0m, in \u001b[0;36mPopen._execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, gid, gids, uid, umask, start_new_session, process_group)\u001b[0m\n\u001b[1;32m   1915\u001b[0m     \u001b[39mif\u001b[39;00m errno_num \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m   1916\u001b[0m         err_msg \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mstrerror(errno_num)\n\u001b[0;32m-> 1917\u001b[0m     \u001b[39mraise\u001b[39;00m child_exception_type(errno_num, err_msg, err_filename)\n\u001b[1;32m   1918\u001b[0m \u001b[39mraise\u001b[39;00m child_exception_type(err_msg)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'fluidsynth'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fluidsynth: panic: An error occurred while reading from stdin.\n",
+      "fluidsynth: warning: No preset found on channel 9 [bank=128 prog=0]\n",
+      "fluidsynth: panic: An error occurred while reading from stdin.\n",
+      "fluidsynth: warning: Instrument not found on channel 0 [bank=0 prog=40], substituted [bank=0 prog=0]\n",
+      "fluidsynth: warning: Instrument not found on channel 1 [bank=0 prog=40], substituted [bank=0 prog=0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FluidSynth runtime version 2.3.2\n",
+      "Copyright (C) 2000-2023 Peter Hanappe and others.\n",
+      "Distributed under the LGPL license.\n",
+      "SoundFont(R) is a registered trademark of Creative Technology Ltd.\n",
+      "\n",
+      "Rendering audio to file './3/3.2/demo/test_3.wav'..\n"
      ]
     }
    ],
    "source": [
-    "fs.midi_to_audio('./3/3.2/demo/test_song_2.mid', './3/3.2/demo/test_2.wav')"
+    "midi_to_mp3('./3/3.2/demo/test_song_3.mid', './3/3.2/demo/test_3.wav')"
    ]
   },
   {
